@@ -78,6 +78,7 @@ These drivers are described in some detail here.
 $$ where $z^\ast$ is the vertical distance above the ELA. }\\
     \hline
     \texttt{ela\_file} & name of file containing ELA variation with time, $\Delta z_{\text{ELA}}$\\
+    \texttt{ela\_ew} & name of file containing longitudinal variations of ELA field. File contains list of longitude, ELA pairs. The ELA perturbations are calculated by linearly interpolating values from file.\\
     \texttt{ela\_a} & ELA factor $a$\\
     \texttt{ela\_b} & ELA factor $b$\\
     \texttt{ela\_c} & ELA factor $c$\\
