@@ -141,6 +141,7 @@ Sections and keys are case sensitive and may contain white space. However, the c
     \texttt{log\_level} & (integer) set to a value between 0, no messages, and 6, all messages are displayed to stdout. By default messages are only logged to file.\\
     \texttt{ice\_limit} & (real) below this limit ice is only accumulated, ice dynamics are switched on once the ice thickness is above this value.\\
     \texttt{marine\_limit} & (real) all ice is assumed lost once water depths reach this value. Note, water depth is negative. \\
+    \texttt{calving\_fraction} & (real) fraction of ice lost due to calving. \\
     \texttt{geothermal} & (real) constant geothermal heat flux.\\
     \texttt{flow\_factor} & (real) the flow law is enhanced with this factor \\
     \texttt{hydro\_time} & (real) basal hydrology time constant \\
